# cgm

./: README.md  pyproject.toml
src/cetragm/: bag.py  config.py  controls.py  draw.py  game.py  main.py  player.py  srs.py  tables.py  ui.py  ui.txt
src/cgm/: __init__.py  audio.py  bag.py  config.py  controls.py  draw.py  game.py  main.py  pieces.py  player.py  srs.py  tables.py  ui.txt
