[project]
name = "cetragm"
version = "0.1.5"
description = "Cetra Grand Master | An oddly familiar block stacker in the command line!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
cgm = "cetragm.main:entry"
cetragm = "cetragm.main:entry"

[tool.setuptools.packages.find]
where = ["src"]
